# game-of-life

./: Dockerfile  Makefile  README.md  compose.yaml  dev.requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  tests.yaml
docs/: core.md  forms.md  game.md  utils.md
game-of-life/: main.py
game-of-life/core/: __init__.py  cfg.py  config.py  logger.py  logger_config.py  logger_setup.py
game-of-life/forms/: __init__.py  form.py
game-of-life/game/: __init__.py  game.py
game-of-life/static/js/: life.js
game-of-life/static/style/: index.css  life.css  style.css
game-of-life/templates/: base.html  index.html  life.html  live.html
game-of-life/utils/: __init__.py  classes.py
tests/game/: test_game.py
tests/utils/: test_classes.py
