[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "Game of Life written in Python and Flask framework"
authors = ["FranChesKo"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
